--- a/data-input.ipynb
+++ b/data-input.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**THIS HAS BEEN IMPLEMENTED INSIDE search/management/commands/import_script**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**MongoDB Data Insertion**"
    ]
   },
